project(CrackingTheCodeInterview)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")

add_executable(isUnique_test 1_1_is_unique.cc)
add_executable(checkPermutation_test 1_2_check_permutation.cc)
add_executable(urlify_test 1_3_urlify.cc)
add_executable(palindromePermutation_test 1_4_palindrome_permutation.cc)
add_executable(oneWayEdit_test 1_5_one_way.cc)
add_executable(stringCompression_test 1_6_string_compression)
add_executable(rotateMatrix_test 1_7_rotate_matrix.cc)
add_executable(zeroMatrix_test 1_8_zero_matrix.cc)
add_executable(stringRotation_test 1_9_string_rotation.cc)
add_executable(removeDups_test 2_1_remove_dups.cc)
add_executable(kthLastNode_test 2_2_kth_last_node.cc)